--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -14,7 +14,6 @@
                         <ol class="carousel-indicators">
                             <li data-target="#stepCarouselIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#stepCarouselIndicators" data-slide-to="1"></li>
-                            <li data-target="#stepCarouselIndicators" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -59,6 +58,17 @@
                                                 <div class="fail-status">
                                                     <i class="fas fa-times"></i>
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="PhoneNum">تلفن همراه</label>
+                                            {% if form.phone_number.errors %}
+                                                {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100 number_input"|attr:"placeholder:09*********" }}
+                                            {% else %}
+                                                {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:w-100 number_input"|attr:"placeholder:09*********" }}
+                                            {% endif %}
+                                            <div class="error">
+                                                <span class="error-body">{% render_field form.phone_number.errors %}</span>
                                             </div>
                                         </div>
                                         {#                            <div class="form-group">#}
@@ -147,40 +157,6 @@
                                         </div>
                                         <div class="form-group">
 
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4"></div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="divide__line text-right">
-                                    <span class="w__title">اطلاعات تماس</span>
-                                    <span class="__line"></span>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-3"></div>
-                                    <div class="col-md-5">
-                                        <div class="form-group">
-                                            <label for="HomeNum">تلفن منزل</label>
-                                            {% if form.home_number.errors %}
-                                                {{ form.home_number|attr:"id:HomeNum"|attr:"class:error w-100"|attr:"placeholder:021*******" }}
-                                            {% else %}
-                                                {{ form.home_number|attr:"id:HomeNum"|attr:"class:w-100"|attr:"placeholder:021*******" }}
-                                            {% endif %}
-                                            <div class="error">
-                                                <span class="error-body">{% render_field form.home_number.errors %}</span>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="PhoneNum">تلفن همراه</label>
-                                            {% if form.phone_number.errors %}
-                                                {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100"|attr:"placeholder:09*********" }}
-                                            {% else %}
-                                                {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:w-100"|attr:"placeholder:09*********" }}
-                                            {% endif %}
-                                            <div class="error">
-                                                <span class="error-body">{% render_field form.phone_number.errors %}</span>
-                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4"></div>
