hidden researcher info btns on click

--- a/industry/templates/industry/layouts/researcher_info.html
+++ b/industry/templates/industry/layouts/researcher_info.html
@@ -38,7 +38,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="request-response">
+                                    <div class="request-response d-none">
                                         <button class="border-button confirm-researcher"
                                                 id="researcher-confirm-" value="">تایید
                                         </button>
@@ -46,7 +46,7 @@
                                                 id="researcher-reject-" value="">رد
                                         </button>
                                     </div>
-                                    <div class="remove-researcher">
+                                    <div class="remove-researcher d-none">
                                         <button class="border-button fail-button delete-researcher"
                                                     id="researcher-remove-" value="">حذف
                                         </button>
