--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5641,7 +5641,37 @@ hr.vertical-line:after {
         background: rgb(255, 255, 255);
         background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(0, 212, 255, 0) 100%);
         z-index: 3;
+        transition: all 0.3s;
     }
+
+    .section > .scroll-left:hover {
+        color: #3ccd1c;
+        padding-left: 5px;
+        padding-right: 15px;
+        cursor: pointer;
+    }
+
+    .section > .scroll-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        padding: 10px;
+        width: 50px;
+        font-size: 30px;
+        background: rgb(255, 255, 255);
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%);
+        z-index: 3;
+        transition: all 0.3s;
+    }
+
+    .section > .scroll-right:hover {
+        color: #3ccd1c;
+        padding-left: 15px;
+        padding-right: 5px;
+        cursor: pointer;
+    }
+
 
     .project-progress .step-container {
         width: max-content;
