--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -38,6 +38,10 @@
                                         <label for="id_task_title">عنوان</label>
                                         <pre contenteditable="true" id="id_task_title"></pre>
                                     </div>
+                                    <ul class="tagId-list">
+                                        <li class="tagId-item">@reza</li>
+                                        <li class="tagId-item">@Sepehr</li>
+                                    </ul>
                                     <div class="ct-task-option d-flex" style="margin-bottom: -45px">
                                         <div class="ct-task-due ct-option-btn">
                                             <button id="id_task_due" type="button" class=""
@@ -133,7 +137,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" id="accept-project">
+                        <button type="submit" class="btn btn-primary" id="accept-project" style="z-index: 2">
                             ثبت
                         </button>
                     </div>
@@ -503,8 +507,7 @@
                                                             </div>
                                                             <div class="ct-checklist-item__detail">
                                                                 <div class="ct-checklist__text"><span
-                                                                        class="atMention me" title="Reza Mottaghi">@reza_mottaghi</span>استخراج
-                                                                    داده های آزمایشگاهی بیماران 101 تا 150
+                                                                        class="atMention me" title="Reza Mottaghi">@reza_mottaghi</span>استخراج داده های آزمایشگاهی بیماران 101 تا 150
                                                                 </div>
                                                                 <div class="ct-checklist-item__control d-flex">
                                                                     <div class="ct-checklist-item-due">
