--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -399,7 +399,7 @@
                                                     افزودن ددلاین
                                                 </button>
                                                 <div class="section w-100">
-                                                    <div class="scroll-left">
+                                                    <div class="scroll-left d-none">
                                                         <svg width="1em" height="1em" viewBox="0 0 16 16"
                                                              class="bi bi-chevron-left h-100" fill="currentColor"
                                                              xmlns="http://www.w3.org/2000/svg">
@@ -413,7 +413,7 @@
                                                                 نیست!
                                                             </div>
                                                         {% endif %}
-                                                        <div class="project-progress mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
+                                                        <div class="project-progress project-progress-sm mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
                                                             {#                                                        <div class="step-container active">#}
                                                             {#                                    <span class="step-date">#}
                                                             {#                                        <div class="start">#}
@@ -458,12 +458,56 @@
                                                                 <span class="step-date">۱۳۹۹/۶/۲۰</span>
                                                                 <span class="step-name">6سابمیت مقاله</span>
                                                             </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
+                                                            <div class="step-container">
+                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
+                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                            </div>
                                                             <div class="line-100">
                                                                 <div class="arrow"></div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="scroll-right">
+                                                    <div class="scroll-right d-none">
                                                         <svg width="1em" height="1em" viewBox="0 0 16 16"
                                                              class="bi bi-chevron-right h-100" fill="currentColor"
                                                              xmlns="http://www.w3.org/2000/svg">
