show tasks in list under task title add task prepare to add ajax save!

--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -34,15 +34,13 @@
                                            hidden>
                                 </label>
                                 <div class="col-12">
-                                    <div class="form-group">
+                                    <div class="form-group mb-1">
                                         <label for="id_task_title">عنوان</label>
                                         <pre contenteditable="true" id="id_task_title"></pre>
                                     </div>
-                                    <ul class="tagId-list">
-                                        <li class="tagId-item">@reza</li>
-                                        <li class="tagId-item">@Sepehr</li>
-                                    </ul>
-                                    <div class="ct-task-option d-flex" style="margin-bottom: -45px">
+                                    <ul class="tagId-list inline-list"></ul>
+                                    <div class="ct-task-option d-flex"
+                                         style="position: absolute;bottom: -50px;right: 0;">
                                         <div class="ct-task-due ct-option-btn">
                                             <button id="id_task_due" type="button" class=""
                                                     data-toggle="datetimepicker" data-target="#id_card_deadline"
@@ -551,7 +549,8 @@
                                                             </div>
                                                             <div class="ct-checklist-item__detail">
                                                                 <div class="ct-checklist__text"><span
-                                                                        class="atMention me" title="Reza Mottaghi">@reza_mottaghi</span>استخراج داده های آزمایشگاهی بیماران 101 تا 150
+                                                                        class="atMention me" title="Reza Mottaghi">@reza_mottaghi</span>استخراج
+                                                                    داده های آزمایشگاهی بیماران 101 تا 150
                                                                 </div>
                                                                 <div class="ct-checklist-item__control d-flex">
                                                                     <div class="ct-checklist-item-due">
