debug color bug of EthicalConsider answers of projects

--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -299,7 +299,7 @@
                                     <span class="section-title">مشخصات پروژه</span>
                                     <div class="section">
                                         <div class="row mbottom-lg-25 flex-column-reverse flex-md-row">
-                                            <div class="col-md-8 col-lg-9">
+                                            <div class="col-md-7 col-lg-9">
                                                 <div class="row m-top-10">
                                                     <div class="col-md-12">
                                                         <div class="pre-header">
@@ -345,7 +345,7 @@
                                                     </div>
                                                 {% endif %}
                                             </div>
-                                            <div class="col-md-4 col-lg-3">
+                                            <div class="col-md-5 col-lg-3">
                                                 <div class="industry-logo-preview text-left mt-4">
                                                     {% if industry_logo %}
                                                         <img id="industry_logo"
@@ -411,7 +411,7 @@
                                                                 نیست!
                                                             </div>
                                                         {% endif %}
-                                                        <div class="project-progress project-progress-sm mbottom-lg-25 {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
+                                                        <div class="project-progress project-progress-sm {% if not project.is_date_valid %}project-progress-disabled{% endif %}">
                                                             {#                                                        <div class="step-container active">#}
                                                             {#                                    <span class="step-date">#}
                                                             {#                                        <div class="start">#}
@@ -430,75 +430,7 @@
                                                             {#                                                        </div>#}
                                                             <div class="step-container active">
                                                                 <span class="step-date">{{ timeScheduling.start }}</span>
-                                                                <span class="step-name">تحلیل داده ها</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">1سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">سابمیت مقاله2</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">سابمیت مقاله3</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">4سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">5سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
-                                                            </div>
-                                                            <div class="step-container">
-                                                                <span class="step-date">۱۳۹۹/۶/۲۰</span>
-                                                                <span class="step-name">6سابمیت مقاله</span>
+                                                                <span class="step-name"> شروع پروژه </span>
                                                             </div>
                                                             <div class="line-100">
                                                                 <div class="arrow"></div>
@@ -772,8 +704,8 @@
                                 <span>
                                     ملاحظات اخلاقی
                                 </span>
-                                <div class='answer'>${policy}</div>
                             </div>
+                            <div class='answer'>${policy}</div>
                         </div>`;
             if (executive_restrictions)
                 role += `<div>
@@ -782,8 +714,8 @@
                                 <span>
                                     محدودیت های اجرایی طرح و روش کاهش آن ها
                                 </span>
-                                <div class='answer'>${executive_restrictions}</div>
                             </div>
+                            <div class='answer'>${executive_restrictions}</div>
                         </div>`;
             $(".project-info-content").html(role);
             $('*').persiaNumber();
